SERVER-20008 Don't fail if stepping past the last page in a file.